fix(ui): make context menu readable in light theme

--- a/apps/client/src/styles.scss
+++ b/apps/client/src/styles.scss
@@ -420,7 +420,7 @@ mat-form-field .mat-hint {
 }
 
 .ngx-contextmenu .dropdown-menu {
-	background-color: var(--activity-bar-bg);
+	background-color: var(--sidebar-header-bg);
 	padding: 2px;
 }
 .ngx-contextmenu li {
